--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,12 +227,8 @@ if(LUAC_PRG)
 endif()
 
 # Lint
-option(CI_LINT "Abort if lint programs not found" OFF)
-if(CI_LINT)
-  set(LINT_REQUIRED "REQUIRED")
-endif()
-find_program(SHELLCHECK_PRG shellcheck ${LINT_REQUIRED})
-find_program(STYLUA_PRG stylua ${LINT_REQUIRED})
+find_program(SHELLCHECK_PRG shellcheck)
+find_program(STYLUA_PRG stylua)
 
 set(STYLUA_DIRS runtime scripts src test contrib)
 
