--- a/.github/workflows/optional.yml
+++ b/.github/workflows/optional.yml
@@ -9,6 +9,8 @@ concurrency:
 
 env:
   INSTALL_PREFIX: ${{ github.workspace }}/nvim-install
+  # Double test timeout since it's running via qemu
+  TEST_TIMEOUT: 2400
   # TEST_FILE: test/functional/shada
   # TEST_FILTER: foo
 
