Replace generic E474 with hardcoded E475 messages describing problems with Listchar options in more detail

--- a/.luarc.json
+++ b/.luarc.json
@@ -7,7 +7,8 @@
     "library": [
       "runtime/lua",
       "${3rd}/busted/library",
-      "${3rd}/luv/library"
+      "${3rd}/luv/library",
+            "${3rd}/luassert/library"
     ],
     "ignoreDir": [
       "test"
