--- a/.luarc.json
+++ b/.luarc.json
@@ -7,8 +7,7 @@
     "library": [
       "runtime/lua",
       "${3rd}/busted/library",
-      "${3rd}/luv/library",
-            "${3rd}/luassert/library"
+      "${3rd}/luv/library"
     ],
     "ignoreDir": [
       "test"
