--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -9,8 +9,8 @@ body:
         *Before reporting:*
         - Confirm the problem is reproducible on [**master**](https://github.com/neovim/neovim/releases/nightly) or [**latest stable**](https://github.com/neovim/neovim/releases/stable) release
         - run `make distclean` when encountering build issues
-        - search [existing issues](https://github.com/neovim/neovim/issues?q=is%3Aissue+is%3Aopen+label%3Abug)
-        - check the [FAQ](https://github.com/neovim/neovim/wiki/FAQ)
+        - search [existing issues](https://github.com/neovim/neovim/issues?q=is%3Aissue+is%3Aopen+label%3Abug,bug-crash) (including [closed](https://github.com/neovim/neovim/issues?q=is%3Aissue+is%3Aclosed+label%3Abug%2Cbug-crash))
+        - check the [FAQ](https://github.com/neovim/neovim/wiki/FAQ) and ["Reporting Problems" in CONTRIBUTING.md](https://github.com/neovim/neovim/blob/master/CONTRIBUTING.md#reporting-problems).
 
         Usage or "How to" questions belong on the [stackoverflow](https://vi.stackexchange.com/) and will be closed.
   - type: textarea
@@ -24,6 +24,7 @@ body:
       label: "Steps to reproduce"
       description: |
         - For build failures: list the exact steps including CMake flags (if any).
+        - If the bug pertains to crashing (or segfault), please include a [stacktrace](https://neovim.io/doc/user/dev_tools.html#dev-tools-backtrace).
         - For startup or shell-related problems: try `env -i TERM=ansi-256color "$(which nvim)"`.
         - Use the provided [minimal reproduction template](https://github.com/neovim/neovim/blob/master/contrib/minimal.lua) to create a minimal configuration. After you fill it out with necessary information, run with `nvim --clean -u minimal.lua`.
         - Please do **not** include a package manager in the reproduction steps.
