build: fix parser installation location
Cmake's `install()` functions like rsync where a trailing slash changes
whether the directory or its contents will be copies.

--- a/src/nvim/CMakeLists.txt
+++ b/src/nvim/CMakeLists.txt
@@ -768,7 +768,7 @@ if(EXISTS ${DEPS_PREFIX}/lib/nvim/parser)
 endif()
 
 install(DIRECTORY ${BINARY_LIB_DIR}
-  DESTINATION ${CMAKE_INSTALL_LIBDIR}/nvim/
+  DESTINATION ${CMAKE_INSTALL_LIBDIR}
   USE_SOURCE_PERMISSIONS)
 
 if(NOT PREFER_LUA)
