--- a/src/nvim/CMakeLists.txt
+++ b/src/nvim/CMakeLists.txt
@@ -450,18 +450,23 @@ endif()
 #-------------------------------------------------------------------------------
 
 get_target_property(prop main_lib INTERFACE_COMPILE_DEFINITIONS)
-foreach(gen_cdef ${prop})
-  if(NOT ${gen_cdef} MATCHES "INCLUDE_GENERATED_DECLARATIONS")
-    list(APPEND gen_cflags "-D${gen_cdef}")
-  endif()
-endforeach()
+if(NOT "${prop}" STREQUAL "prop-NOTFOUND")
+  foreach(gen_cdef ${prop})
+    if(NOT ${gen_cdef} MATCHES "INCLUDE_GENERATED_DECLARATIONS")
+      list(APPEND gen_cflags "-D${gen_cdef}")
+    endif()
+  endforeach()
+endif()
 
 get_directory_property(targets BUILDSYSTEM_TARGETS)
 foreach(target ${targets})
   get_target_property(prop ${target} INTERFACE_INCLUDE_DIRECTORIES)
-  foreach(gen_include ${prop})
-    list(APPEND gen_cflags "-I${gen_include}")
-  endforeach()
+  if(NOT "${prop}" STREQUAL "prop-NOTFOUND")
+    message(STATUS "${target} props '${prop}'")
+    foreach(gen_include ${prop})
+      list(APPEND gen_cflags "-I${gen_include}")
+    endforeach()
+  endif()
 endforeach()
 
 if(APPLE AND CMAKE_OSX_SYSROOT)
