revert: "ci: external deps"
This reverts commit 5fa2fecbb7ee1d0072235b726f23c14f67cd1c79.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,19 +31,39 @@ env:
 jobs:
 
   with-external-deps:
-    runs-on: macos-14
+    runs-on: ubuntu-22.04
     timeout-minutes: 10
+    env:
+      CC: gcc
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
 
-      - run: |
-          brew install gettext libtermkey libuv libvterm luajit luv msgpack tree-sitter unibilium
+      - name: Install dependencies
+        run: |
+          sudo add-apt-repository ppa:neovim-ppa/stable
+          sudo apt-get install -y \
+            libluajit-5.1-dev \
+            libmsgpack-dev \
+            libtermkey-dev \
+            libunibilium-dev \
+            libuv1-dev \
+            lua-filesystem \
+            lua-lpeg \
+            luajit \
+            lua-luv-dev
+            # libtree-sitter-dev \
+            # libvterm-dev
 
-      - run: |
-          cmake -S cmake.deps --preset ci -D USE_BUNDLED=OFF
+            # Remove comments from packages once we start using these external
+            # dependencies.
+
+      - name: Build third-party deps
+        run: |
+          cmake -S cmake.deps --preset external_deps
           cmake --build .deps
 
-      - run: |
+      - name: Build
+        run: |
           cmake --preset ci
           cmake --build build
