fixup: string_string=force

--- a/src/uncrustify.cfg
+++ b/src/uncrustify.cfg
@@ -1125,7 +1125,7 @@ sp_after_bit_colon              = ignore   # ignore/add/remove/force
 force_tab_after_define          = false    # true/false
 
 # Add or remove space between two strings.
-sp_string_string                = ignore   # ignore/add/remove/force
+sp_string_string                = force    # ignore/add/remove/force
 
 #
 # Indenting options
@@ -3747,5 +3747,5 @@ set CLASS_COLON                  REAL_FATTR_CONST
 set CLASS_COLON                  REAL_FATTR_NONNULL_ALL
 set CLASS_COLON                  REAL_FATTR_PURE
 set CLASS_COLON                  REAL_FATTR_WARN_UNUSED_RESULT
-# option(s) with 'not default' value: 135
+# option(s) with 'not default' value: 136
 #
