build(luarc): remove deprecated {3rd} syntax
Vendor https://github.com/LuaCATS/luv.

--- a/.luarc.json
+++ b/.luarc.json
@@ -5,9 +5,7 @@
   },
   "workspace": {
     "library": [
-      "runtime/lua",
-      "${3rd}/busted/library",
-      "${3rd}/luv/library"
+      "runtime/lua"
     ],
     "ignoreDir": [
       "test"
