fix(fs.normalize): improve environment variable expansion
Adds Windows support.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ env:
   NVIM_LOG_FILE: ${{ github.workspace }}/build/.nvimlog
   TSAN_OPTIONS: log_path=${{ github.workspace }}/build/log/tsan
   VALGRIND_LOG: ${{ github.workspace }}/build/log/valgrind-%p.log
-  # TEST_FILE: test/functional/core/startup_spec.lua
+  TEST_FILE: test/functional/lua/fs_spec.lua
   # TEST_FILTER: foo
 
 jobs:
